# DS_final_project

./: .gitignore  README.md  pyproject.toml
src/: config.py  data_loader.py  test_run.py  visualization.py
src/neuro_deep_learning/: config.py  data_loader.py  dataset.py  fetch.py  grand_average_bnci.py  grand_average_schirrmeister2017.py  replication_log_full.txt  train.py  visualization.py
tests/: test_cnn.py  test_config.py  test_dataset.py
