[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro_deep_learning"
version = "0.1.0"
description = "Reproduction of Schirrmeister et al. (2017) Deep ConvNet for EEG"
requires-python = ">=3.8"
authors = [
    {name = "Peter"},
    {name = "Margaret"},
    {name = "Helen"}
]
dependencies = [
    "numpy",
    "pandas",
    "mne",
    "moabb",
    "torch",
    "scikit-learn",
    "matplotlib",
    "seaborn"
]

# NEW: Development Dependencies (Required by Guidelines)
[project.optional-dependencies]
dev = [
    "pytest"
]

# CRITICAL ADDITION FOR SRC LAYOUT
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]